--- a/project0/view/styles.css
+++ b/project0/view/styles.css
@@ -3,6 +3,18 @@ body
 	background-color: #ffffff;
 }
 
+form 
+{
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	
+	border-style: solid;
+	border-width: 1px;
+
+	background-color: #fcd825;
+}
+
 
 #option 
 {	
@@ -18,6 +30,7 @@ body
 	margin-left: auto;	
 	margin-right: auto;
 	margin-bottom: 30px;
+	margin-top: 40px;
 	padding: 0px;
 }
 
@@ -33,15 +46,28 @@ h1
 	line-height: 60px;
 }
 
-#food
+.food
 {
 	left-margin: 20px;
 	font-family: sans-serif;
 
 	border-style: solid;
 	border-color: black;
-	border-width: 0px;
+	border-width: 1px;
 	padding-left: 20px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+
+	display: inline-block;
+	position: relative;
+}
+
+input[type="submit"]
+{
+	font-size: 20px;
+	font-family: message-box;
+
+	position: relative;
+	left: 470px;
+	bottom: 5px;
 }
