--- a/project0/view/styles.css
+++ b/project0/view/styles.css
@@ -46,7 +46,7 @@ h1
 	line-height: 60px;
 }
 
-.food
+input[name='food']
 {
 	left-margin: 20px;
 	font-family: sans-serif;
@@ -59,7 +59,6 @@ h1
 	padding-bottom: 10px;
 
 	display: inline-block;
-	position: relative;
 }
 
 input[value="Go Back"]
